@@ -18,6 +18,7 @@ public class ItemSpawnConfig {
     /**
      * Gives a list of items(including weapons) and their spawn locations for the forest map
      * Each item can have multiple spawn locations and each location can have multiple items
+     *
      * @return a map of item names to a list of spawn info (location and quantity)
      */
     // Forest Map
@@ -33,10 +34,10 @@ public class ItemSpawnConfig {
                 new ItemSpawner.ItemSpawnInfo(new GridPoint2(11, 7), 1),
                 new ItemSpawner.ItemSpawnInfo(new GridPoint2(11, 12), 1)
         ));
-        config.put(Weapons.RIFLE.name(), Arrays.asList(
+        config.put(Weapons.RIFLE.name(), List.of(
                 new ItemSpawner.ItemSpawnInfo(new GridPoint2(16, 9), 1)
         ));
-        config.put(Weapons.LIGHTSABER.name(), Arrays.asList(
+        config.put(Weapons.LIGHTSABER.name(), List.of(
                 new ItemSpawner.ItemSpawnInfo(new GridPoint2(14, 7), 1)
         ));
 
@@ -44,13 +45,97 @@ public class ItemSpawnConfig {
         return config;
     }
 
-    /** Server Room spawning. Spawns a rifle on the purple spawn pad */
+    /**
+     * Gives a list of items(including weapons) and their spawn locations for the shipping map
+     * Each item can have multiple spawn locations and each location can have multiple items
+     *
+     * @return a map of item names to a list of spawn info (location and quantity)
+     */
+    public static Map<String, List<ItemSpawner.ItemSpawnInfo>> shippingmap() {
+        Map<String, List<ItemSpawner.ItemSpawnInfo>> config = new HashMap<>();
+
+        config.put(Weapons.RIFLE.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(5, 7), 1)
+        ));
+
+        return config;
+    }
+
+    /**
+     * Gives a list of items(including weapons) and their spawn locations for the storage map
+     * Each item can have multiple spawn locations and each location can have multiple items
+     *
+     * @return a map of item names to a list of spawn info (location and quantity)
+     */
+    public static Map<String, List<ItemSpawner.ItemSpawnInfo>> storage1map() {
+        Map<String, List<ItemSpawner.ItemSpawnInfo>> config = new HashMap<>();
+
+        config.put(Weapons.RIFLE.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(4, 17), 1)
+        ));
+
+        return config;
+    }
+
+    /**
+     * Server Room spawning. Spawns a rifle on the purple spawn pad
+     */
     public static Map<String, List<ItemSpawner.ItemSpawnInfo>> servermap() {
         Map<String, List<ItemSpawner.ItemSpawnInfo>> config = new HashMap<>();
 
-        config.put(Weapons.RIFLE.name(), Arrays.asList(
-                new ItemSpawner.ItemSpawnInfo(new GridPoint2(15, 15), 1)
+        config.put(Weapons.RIFLE.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(25, 16), 1)
         ));
+
+        return config;
+    }
+
+    /**
+     * Server Room spawning. Spawns a rifle on the purple spawn pad
+     */
+    public static Map<String, List<ItemSpawner.ItemSpawnInfo>> tunnelmap() {
+        Map<String, List<ItemSpawner.ItemSpawnInfo>> config = new HashMap<>();
+
+        config.put(Weapons.PISTOL.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(8, 18), 1)
+        ));
+
+        return config;
+    }
+
+    /**
+     * Research Room spawning. Spawns a pistol, lightsaber, rifle in the map on various location
+     */
+    public static Map<String, List<ItemSpawner.ItemSpawnInfo>> researchmap() {
+        Map<String, List<ItemSpawner.ItemSpawnInfo>> config = new HashMap<>();
+
+        config.put(Weapons.PISTOL.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(1, 12), 1)
+        ));
+        config.put(Weapons.RIFLE.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(25, 16), 1)
+        ));
+        config.put(Weapons.LIGHTSABER.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(22, 6), 1)
+        ));
+
+
+        return config;
+    }
+
+    /**
+     * Security Room spawning. Spawns a pistol, lightsaber, rifle in the map on various location
+     */
+    public static Map<String, List<ItemSpawner.ItemSpawnInfo>> securitymap() {
+        Map<String, List<ItemSpawner.ItemSpawnInfo>> config = new HashMap<>();
+
+        config.put(Weapons.PISTOL.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(24, 11), 1)
+        ));
+        config.put(Weapons.LIGHTSABER.name(), List.of(
+                new ItemSpawner.ItemSpawnInfo(new GridPoint2(22, 6), 1)
+        ));
+
 
         return config;
     }
